<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".LoginActivity">

  <EditText
    android:id="@+id/username_input"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="140dp"
    android:layout_marginEnd="64dp"
    android:hint="@string/login_username_hint"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/password_input"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="64dp"
    android:hint="@string/login_password_hint"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/username_input" />

  <Button
    android:id="@+id/login_button"
    android:layout_width="281dp"
    android:layout_height="60dp"
    android:layout_marginStart="64dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="64dp"
    android:text="@string/login_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_input" />

  <TextView
    android:id="@+id/register_link"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginTop="336dp"
    android:text="@string/register_link"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/recover_password_link"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="148dp"
    android:layout_marginTop="336dp"
    android:layout_marginEnd="48dp"
    android:text="@string/recover_password_link"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
