<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RegisterActivity">

  <EditText
    android:id="@+id/register_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="140dp"
    android:layout_marginEnd="64dp"
    android:hint="@string/register_username_hint"
    android:importantForAutofill="no"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/register_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/register_username"
    android:layout_marginStart="64dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="64dp"
    android:hint="@string/register_password_hint"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_username" />

  <EditText
    android:id="@+id/register_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/register_password"
    android:layout_marginStart="64dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="64dp"
    android:hint="@string/register_email_hint"
    android:importantForAutofill="no"
    android:inputType="textEmailAddress"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_password" />

  <Button
    android:id="@+id/register_button"
    android:layout_width="283dp"
    android:layout_height="65dp"
    android:layout_below="@+id/register_email"
    android:layout_marginTop="20dp"
    android:text="@string/register_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_email" />

  <TextView
    android:id="@+id/login_link"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/login_link"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
